fix welcome background image stretch issue

--- a/src/assets/style/page/_login.scss
+++ b/src/assets/style/page/_login.scss
@@ -1,6 +1,7 @@
 .login {
   background-image: url('../images/bg-1.png');
-  background-size: 100% 100%;
+  background-size: cover;
+  background-position: center center;
   background-repeat: no-repeat;
   height: 100vh;
   position: relative;
